objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Sold_to_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Sold_to_Account__r.CUST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>Opportunity.Account.BillingStreet &amp; BR() &amp;  Opportunity.Account.BillingCity &amp; &apos; &apos;&amp;  Opportunity.Account.BillingState&amp;&apos; &apos;&amp;Opportunity.Account.BillingPostalCode &amp; BR() &amp;Opportunity.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Customer_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Customer Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <inlineHelpText>What Info should we show on records for this object?</inlineHelpText>
        <label>Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sold_to_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>MFGPRO account</description>
        <label>Quote Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>